botón share y responsive

--- a/index.html
+++ b/index.html
@@ -70,8 +70,15 @@
 			</div>
 			<div id="indepth_resultados">
 				<div class="inner">
-					<div class="indepth_result_container"></div>
-					<div id="indepth_twittear"></div>
+					<div id="container_result">
+						<div class="indepth_result_container"></div>
+						<div id="social_media">
+							<div id="indepth_facebook"></div>
+							<div id="indepth_twittear"></div>
+						</div>
+						
+					</div>
+					
 				</div>
 			</div>
 			<scripts>
