--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</script>
 	</head>
 	<body>
-		<link type="text/css" rel="stylesheet" href="css/indepth.css?v=1.0.29"/>
+		<link type="text/css" rel="stylesheet" href="css/indepth1.css?v=1.0.29"/>
 		<div class="indepth_pages">
 			
 			<style >
